<resources>
    <string name="app_name">Education</string>

    <!-- App Name -->
    <string name="app_name_first_part">Education</string>
    <string name="app_name_second_part">Portal</string>
    <string name="app_name_full">Education Portal</string>

    <!-- log out -->
    <string name="logout_title">Logout</string>
    <string name="gps_chec">Please check your gps connection</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="lorem_short"> sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</string>
    <string name="internet_not_available">Internet is not available!!, Please check your connection or connect to the internet</string>

    <!-- Drawer Navigation -->
    <string name="navigation_drawer_open"> Open </string>
    <string name="navigation_drawer_close"> Close </string>
    <string name="it_support">Powered by: Spectrum IT Solutions LTD</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_my_canteen">My Appointments</string>
    <string name="nav_my_doctors">My Doctors</string>
    <string name="nav_my_prescription">My Prescription</string>
    <string name="nav_my_test">My Test</string>
    <string name="nav_health_tips">Health Tips</string>
    <string name="contact_edu">Contact OCD</string>
    <string name="nav_find_specialities_by_symptoms">Find Speciality By Symptoms</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_rate_this_app">Rate This App</string>
    <string name="nav_header_other">Others</string>
    <string name="nav_header_communicate">Communicate</string>
    <string name="nav_privacy_policy">Privacy policy</string>
    <string name="nav_terms_and_condition">Terms and Condition</string>

    <!-- Bottom navigation -->
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_gallery">Gallery</string>
    <string name="bottom_nav_about_ocd">About ocd</string>
    <string name="bottom_nav_payment">Payment</string>
    <string name="bottom_nav_profile">Hospital</string>

    <!-- Image View Content Description-->
    <string name="empty_content_description">Null</string>

    <!-- Coming Soon Dialog & Confirmation Dialog-->
    <string name="coming_soon_message">This feature is coming soon</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>

    <!-- Search -->
    <string name="search_hint">Search </string>
    <!-- News Feed Header -->
    <string name="news_feed_header">News Feed</string>

    <!-- Transitions -->
    <string name="searchTransition">search</string>
    <string name="doctorTransition">doctor image</string>
    <string name="allSpecialityTransition">all Speciality</string>
    <string name="specialityName">speciality Name</string>

    <string name="update_message">Update is Available</string>
    <string name="update_now">Update Now</string>
    <!--Call -->
    <string name="call">Call</string>

    <!--All Header -->
    <string name="allSpecialityHeader">All Speciality</string>
    <string name="allAppointments">All Appointments</string>
    <string name="allDoctors">All Doctors</string>
    <string name="noInterNet">No internet!</string>

    <!--  -->
    <string name="gender">Gender</string>
    <string name="education">Education</string>
    <string name="chambers_header">Chambers</string>
    <string name="suggested_doc_header">Suggested Doctor</string>
    <string name="please_wait">Please wait....</string>
    <string name="see_all">see all view</string>
    <string name="clas">Class</string>
    <string name="exam">Exam</string>
    <string name="coupon">Coupon</string>
    <string name="guest">Guest</string>
    <string name="bill">Bill</string>
    <string name="loading">Loading...</string>
    <string name="about_edu">About App</string>
    <string name="ocd_member">Ocd Member</string>
    <string name="see_all_member">See All Classmate</string>
    <string name="see_all_lecture">See All Lecture</string>
    <string name="see_all_homework">See All Homework</string>
    <string name="seeAll">See All</string>
    <string name="bottom_nav_post">News feed</string>
    <string name="update_available">update available</string>
    <string name="update_not_available">update not available</string>
    <string name="restart_to_update">restart update</string>
    <string name="action_restart">start</string>
    <string name="others">Others</string>
    <string name="upcomming_exam">Upcomming exam</string>
    <string name="bottom_nav_notification">Notification</string>
    <string name="online_class_text">Online live class</string>
    <string name="nav_contact_us">Contact us</string>
    <string name="homework">Homework</string>
    <string name="study">Study</string>
    <string name="see_all_official">see all official</string>
</resources>
