<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item android:id="@+id/nav_item_my_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_my_profile" />

        <item android:id="@+id/nav_item_my_appointments"
            android:icon="@drawable/clas"
            android:title="@string/clas"/>

        <item android:id="@+id/nav_item_my_doctors"
            android:icon="@drawable/ic_doctors"
            android:title="@string/exam" />

    </group>


    <item android:title="@string/nav_header_communicate">
        <menu>
            <item android:id="@+id/nav_item_about_us"
                android:icon="@drawable/ic_health_tips"
                android:title="@string/nav_about_us" />

            <item android:id="@+id/nav_item_contact_us"
                android:icon="@drawable/ic_health_tips"
                android:title="@string/nav_contact_us" />

            <item android:id="@+id/nav_item_rate_this_app"
                android:icon="@drawable/ic_rate_this_app"
                android:title="@string/nav_rate_this_app" />

            <item android:title="@string/nav_privacy_policy"
                android:icon="@drawable/ic_privacy"
                android:id="@+id/nav_item_privacy_policy"/>

            <item android:title="@string/nav_terms_and_condition"
                android:icon="@drawable/ic_privacy"
                android:id="@+id/nav_item_terms_and_condition"/>
        </menu>
    </item>
</menu>